<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="content_authority_weather">io.github.mcvlaga.moonlauncher.weather</string>
    <string name="content_authority_tasks">io.github.mcvlaga.moonlauncher.tasks</string>
    <string name="content_authority_apps">io.github.mcvlaga.moonlauncher.apps</string>

    <string name="app_name">Moon Launcher</string>
    <string name="app_drawer_header">Applications</string>
    <string name="action_settings">Settings</string>
    <string name="action_tasks_list">Tasks</string>




    <!-- PreferenceScreen strings -->
    <!-- Preferences for weather -->
    <string name="pref_category_weather_title">Weather</string>
    <string name="pref_show_weather_title">Show weather widget</string>
    <string name="pref_show_weather_key" translatable="false">show_weather</string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default">Mountain View, CA 94043</string>
    <string name="pref_location_summary_default">Click to set your location</string>

    <string name="pref_units_title">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default">metric</string>
    <string name="pref_units_summary_default">Metric</string>
    <string name="pref_units_title_metric">Metric</string>
    <string name="pref_units_title_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="pref_num_forecast_title">Number of days</string>
    <string name="pref_num_forecast_key" translatable="false">num_forecast</string>
    <string name="pref_num_forecast_default">5</string>
    <string name="pref_num_forecasts_min">1</string>
    <string name="pref_num_forecasts_max">7</string>

    <!-- Preferences for tasks -->
    <string name="pref_category_tasks_title">Tasks</string>
    <string name="pref_show_tasks_key" translatable="false">show_tasks</string>
    <string name="pref_show_tasks_title">Show tasks widget</string>

    <string name="pref_max_tasks_title">Max number of tasks</string>
    <string name="pref_max_tasks_key" translatable="false">max_tasks</string>
    <string name="pref_max_tasks_default">10</string>
    <string name="pref_max_tasks_min">3</string>
    <string name="pref_max_tasks_max">15</string>

    <!-- Preferences for apps -->
    <string name="pref_category_apps_title">To Do</string>
    <string name="pref_hidden_apps_key" translatable="false">hidden_apps</string>
    <string name="pref_hidden_apps_title">Hidden apps</string>

    <!-- Preferences shared -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <!-- Preferences hidden apps dialog -->
    <string name="format_hidden_apps_summary">
        <xliff:g id="hidden_apps_summary">%1d</xliff:g> apps are hidden
    </string>
    <string name="format_hidden_app_summary">
        <xliff:g id="hidden_app_summary">%1d</xliff:g> app is hidden
    </string>




    <!-- Home strings-->
    <!-- Tasks widget -->
    <string name="tasks_title">Tasks</string>
    <string name="undo_complete_task">UNDO</string>
    <string name="task_completed">Task completed</string>
    <string name="empty_tasks_list">You have no tasks</string>

    <!-- Apps widget -->
    <string name="quick_apps_title">Apps</string>
    <string name="empty_quick_apps_grid">You have no apps</string>

    <!-- Weather widget -->
    <string name="weather_humidity_title">humidity</string>
    <string name="weather_wind_title">wind</string>
    <string name="weather_high_title">high</string>
    <string name="weather_low_title">low</string>
    <string name="weather_degrees_symbol">\u00B0</string>
    <string name="weather_degrees_metric">C</string>
    <string name="weather_degrees_imperial">F</string>
    <string name="format_temperature">
        <xliff:g id="temp">%1d</xliff:g>\u00B0
    </string>
    <string name="format_apparent_temperature">
        Feels like <xliff:g id="temp">%1d</xliff:g>\u00B0
    </string>
    <string name="format_humidity">
        <xliff:g id="humidity">%1d</xliff:g>%%
    </string>
    <string name="format_wind_speed_metric">
        <xliff:g id="wind_speed">%1d</xliff:g> kmh
    </string>
    <string name="format_wind_speed_imperial">
        <xliff:g id="wind_speed">%1d</xliff:g> mph
    </string>


    <!-- Tasks list activity -->
    <string-array name="tasks_list_options">
        <item>All tasks</item>
        <item>Active tasks</item>
        <item>Completed tasks</item>
    </string-array>



    <!-- AddEditDialogFragment strings -->
    <string name="add_task_title">Add new task</string>
    <string name="edit_task_title">Edit task</string>
    <string name="add_edit_title_title">Title</string>
    <string name="add_edit_title_hint">Add a title</string>
    <string name="add_edit_date_title">Date</string>
    <string name="add_edit_date_button">Add a date</string>
    <string name="add_edit_time_title">Time</string>
    <string name="add_edit_time_button">Add time</string>
    <string name="add_edit_color_title">Color</string>
    <string name="add_edit_task_save">Save</string>
    <string name="add_edit_task_cancel">Cancel</string>

    <string name="colorTasksOne">#dedede</string>
    <string name="colorTasksTwo">#657DFF</string>
    <string name="colorTasksThree">#C13EFF</string>
    <string name="colorTasksFour">#37dcfe</string>
    <string name="colorTasksFive">#37FEBD</string>



    <string name="path_pathmorph_expandcollapse">M 1,-4 L 1,4 L -1,4 L -1,-4 Z</string>
</resources>
