<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    app:cardBackgroundColor="@color/colorSecondaryBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/card_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_card"
                android:paddingRight="@dimen/margin_card"
                android:paddingTop="@dimen/margin_small">

                <TextView
                    android:id="@+id/city_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_home_header"
                    tools:text="St Charles, MO" />


                <TextView
                    android:id="@+id/summary_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_size_weather_content"
                    tools:text="Sunny" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_temperature"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/temperature_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:includeFontPadding="false"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/text_size_weather_degrees"
                                tools:text="11" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:paddingTop="@dimen/padding_degrees_symbol"
                                android:text="@string/weather_degrees_symbol"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/text_size_weather_degrees_symbol" />

                            <TextView
                                android:id="@+id/degrees_unit_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:paddingTop="@dimen/padding_temp_scale"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/text_size_weather_temp_scale"
                                tools:text="C" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/apparent_temp_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_feels_like"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_weather_content"
                            tools:text="Feels like -10°" />
                    </LinearLayout>


                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/icon_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:adjustViewBounds="true"
                            android:src="@drawable/weather_large_partly_cloudy_day" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:text="@string/weather_humidity_title"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_weather_content_smaller" />

                        <TextView
                            android:id="@+id/humidity_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/text_size_weather_content_smaller"
                            tools:text="79%" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:text="@string/weather_wind_title"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_weather_content_smaller" />

                        <TextView
                            android:id="@+id/wind_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/text_size_weather_content_smaller"
                            tools:text="12 km/h" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:text="@string/weather_high_title"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_weather_content_smaller" />

                        <TextView
                            android:id="@+id/high_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/text_size_weather_content_smaller"
                            tools:text="22" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:text="@string/weather_low_title"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_weather_content_smaller" />

                        <TextView
                            android:id="@+id/low_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/text_size_weather_content_smaller"
                            tools:text="23" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/expand_button_parent"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageButton
                    android:id="@+id/expand_card_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="false"
                    android:src="@drawable/weather_arrow" />
            </RelativeLayout>

            <ListView
                android:id="@+id/weather_forecast_list_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:divider="@null"
                android:dividerHeight="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_location_permission_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/grant_location_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grant location permission" />
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>